Fixing invalid attribute overflow and changing the background for the clock and weather.

--- a/styles/modules-center/_modulesCenter.scss
+++ b/styles/modules-center/_modulesCenter.scss
@@ -9,7 +9,7 @@ modules-center-container {
 }
 
 date-time-weather-container {
-  background-color: $mantle-transparent;
+  background-color: $crust-transparent;
   border: 2px solid $surface2;
   border-radius: $border-radius;
 }
