--- a/styles/modules-right/_systeminfocontrols.scss
+++ b/styles/modules-right/_systeminfocontrols.scss
@@ -37,6 +37,5 @@ user-avatar{
   min-width: 96px;
   min-height: 96px;
   border-radius: 9999px;
-  overflow: hidden;
   border: 2px solid $surface0;
 }
